Use List.of instead of emptyList